classDiagram
    class Task {
        +String description
        +String time
        +String frequency
        +Boolean completed
        +Date due_date
        +String pet_name
        +mark_complete() Task
    }

    class Pet {
        +String name
        +String breed
        +Int age
        +String allergies
        +String medications
        +List tasks
        +add_task(task) None
        +get_tasks() List
    }

    class Owner {
        +String name
        +List pets
        +add_pet(pet) None
        +get_all_tasks() List
    }

    class Scheduler {
        +Owner owner
        +sort_by_time(tasks) List
        +filter_tasks(pet_name, completed) List
        +detect_conflicts() List
        +mark_task_complete(task, pet) Task
        +get_daily_schedule() List
    }

    Owner "1" --> "0..*" Pet : owns
    Pet "1" --> "0..*" Task : has
    Scheduler --> Owner : manages
